# compute_pyscf_ecp

./: .gitignore  README.md  energy_references.py  main.py  make_shards.py  pyproject.toml  utils.py
test_data/: dataset_c4h6_finetune.pkl  dataset_c4h6_finetune.wb97m-d3bj_ecp.pkl
