[project]
name = "compute-pyscf-ecp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyscf>=2.11.0",
    "pyscf-dispersion>=1.3.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cuda = [
    "cutensor-cu12>=2.3.1",
    "gpu4pyscf-cuda12x>=1.4.3",
]

